# SpaceTime

./: .gitignore  CMakeLists.txt  README.md  digest.txt  main.cpp  vcpkg.json
shaders/: fragment.glsl  trail.frag  trail.vert  vertex.glsl
src/: Camera.cpp  Camera.h  CelestialBody.cpp  CelestialBody.h  ComputeShader.cpp  ComputeShader.h  GravityWell.cpp  GravityWell.h  Input.cpp  Input.h  PhysicsEngine.cpp  PhysicsEngine.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShaderProgram.h  Simulation.cpp  Simulation.h  main.cpp  raii.h
src/shaders/: fragment.glsl  gravity.comp  gravity_well.comp.glsl  gravitywell.frag  gravitywell.vert  trail.frag  trail.vert  vertex.glsl
